[package]
name = "greina"
version = "0.1.0"
edition = "2024"

[dependencies]
bitvec = "1.0.1"
env_logger = "0.11.8"
fuser = "0.16.0"
libc = "0.2.178"
proptest-state-machine = "0.6.0"
zerocopy = { version = "0.8.31", features = ["derive"] }

[dev-dependencies]
proptest = "1.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
fuser = { version = "0.16.0", features = ["libfuse"] }
